--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,6 @@ line-height: 1.5;
 body {
     font-family: 'Josefin Sans', sans-serif;
     font-family: 'Josefin Slab', serif;
-    padding: 0 3rem;
+    /* padding: 0 3rem; */
     background-color: #fbfaf9;
 }
